[tool.poetry]
name = "horpy"
version = "0.1.0"
description = "Um pacote que plota gráficos 2D para a função radial do átomo de hidrogênio e 3D para a parte angular."
authors = ["Ramon Medeiro <r.medeiro10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
